feat(header,main):change logo and header app company

--- a/front/src/app/modules/auth/pages/forgot-password/forgot-password.component.scss
+++ b/front/src/app/modules/auth/pages/forgot-password/forgot-password.component.scss
@@ -6,6 +6,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  > img {
+    width: 300px;
+    height: auto;
+    margin-top: 50px;
+    border-radius: 5px;
+    display:flex;
+  justify-content: flex-start;
+  align-items: center;
+  }
   &_form {
     width: 35vw;
     min-height: 45vh;
