--- a/front/src/app/core/layout/header/header.component.html
+++ b/front/src/app/core/layout/header/header.component.html
@@ -2,5 +2,7 @@
   <div class="header_left">
     <img src="assets/img/phican_logo.png">
   </div>
-  <div class="header_right"></div>
+  <div class="header_right">
+    <button mat-raised-button color="accent">Log Out</button>
+  </div>
 </div>
