--- a/front/src/app/core/layout/header/header.component.scss
+++ b/front/src/app/core/layout/header/header.component.scss
@@ -3,22 +3,33 @@
   height: 12vh;
   background: rgb(0,0,0);
   background: linear-gradient(90deg, rgba(0,0,0,1) 24%, rgba(94,95,98,1) 75%, rgba(203,47,47,1) 100%);
-    &_left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &_left {
     width: 25%;
     padding: 5px;
     display:flex;
+    margin-left: 20px;
     justify-content: flex-start;
     align-items: center;
     > img {
-      width: 160px;
+      width: 140px;
       height: auto;
       border-radius: 5px;
-      margin-left: 10px;
-      margin-top: 30px;
-
+      display:flex;
+    justify-content: flex-start;
+    align-items: center;
     }
   }
   &_right {
     width: 75%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    >button {
+      margin-right: 20px;
+      color: aliceblue;
+    }
   }
  }
