--- a/front/src/app/modules/auth/auth.component.scss
+++ b/front/src/app/modules/auth/auth.component.scss
@@ -1,6 +1,6 @@
 .auth {
   width: 100%;
-  height: 90%;
+  height:100vh;
   background-image: url('../../../assets/img/wallpaper_login.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
