--- a/front/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
+++ b/front/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
@@ -1,41 +1,41 @@
 <div class="forgot">
-  <form class="forgot_form" [formGroup]="forgotForm">
-    <h2>PhiCan App Center</h2>
-    <div class="forgot_form-form" *ngIf="!sendingSuccess">
-    <p>Para recuperar la contraseña debe de introducir los siguientes campos. El supervisor le entregará sus nuevas credenciales</p>
-    <mat-form-field class="example-full-width">
-      <mat-label>Email</mat-label>
-      <input
-        type="email"
-        matInput
-        [formControl]="emailFormControl"
-        placeholder="Ex. pat@example.com"
-      />
-      <mat-error
-        *ngIf="
-          emailFormControl.hasError('email') &&
-          !emailFormControl.hasError('required')
-        "
-      >
-        Introduce un email válido
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Email is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Nombre del usuario</mat-label>
-      <input matInput type="text" />
-      <mat-error class="textalternative-red" *ngIf="nameFormControl.hasError('required')">Nombre de usuario obligatorio
-      </mat-error>
-      <mat-error class="textalternative-red" *ngIf="nameFormControl.hasError('maxLength')">Nombre no debe sobrepasar los 20 caracteres
-      </mat-error>
-    </mat-form-field>
-    <button mat-raised-button color="accent" (click)="recoveryAccount()">Recuperar cuenta de usuario</button>
+  <img src="assets/img/phican_logo.png">
+  <div class="forgot">
+    <form class="forgot_form" [formGroup]="forgotForm">
+      <h2>PhiCan App Center</h2>
+      <div class="forgot_form-form" *ngIf="!sendingSuccess">
+        <p>Para recuperar la contraseña debe de introducir los siguientes campos. El supervisor le entregará sus nuevas
+          credenciales</p>
+        <mat-form-field class="example-full-width">
+          <mat-label>Email</mat-label>
+          <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com" />
+          <mat-error *ngIf="
+            emailFormControl.hasError('email') &&
+            !emailFormControl.hasError('required')
+          ">
+            Introduce un email válido
+          </mat-error>
+          <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Nombre del usuario</mat-label>
+          <input matInput type="text" />
+          <mat-error class="textalternative-red" *ngIf="nameFormControl.hasError('required')">Nombre de usuario
+            obligatorio
+          </mat-error>
+          <mat-error class="textalternative-red" *ngIf="nameFormControl.hasError('maxLength')">Nombre no debe sobrepasar
+            los 20 caracteres
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="accent" (click)="recoveryAccount()">Recuperar cuenta de usuario</button>
+      </div>
+      <div *ngIf="sendingSuccess">
+        <p>El mensaje de confirmación ha sido enviado a su supervisor, vuelva a inicio</p>
+      </div>
+      <button mat-raised-button color="accent" (click)="back()">Volver a Inicio</button>
+    </form>
   </div>
-  <div *ngIf="sendingSuccess">
-    <p>El mensaje de confirmación ha sido enviado a su supervisor, vuelva a inicio</p>
-  </div>
-    <button mat-raised-button color="accent" (click)="back()">Volver a Inicio</button>
-  </form>
+
 </div>
