--- a/front/src/app/core/layout/header/header.component.html
+++ b/front/src/app/core/layout/header/header.component.html
@@ -3,6 +3,9 @@
     <img src="assets/img/phican_logo.png">
   </div>
   <div class="header_right">
-    <button mat-raised-button color="accent">Log Out</button>
+    <div class="header_user">
+     <span>Bienvenido </span> <span class="header_user-name"> {{user.name}}</span>
+    </div>
+    <button mat-raised-button color="accent" (click)="logout()">Log Out</button>
   </div>
 </div>
