--- a/front/src/app/core/layout/header/header.component.html
+++ b/front/src/app/core/layout/header/header.component.html
@@ -3,7 +3,7 @@
     <img src="assets/img/phican_logo.png">
   </div>
   <div class="header_right">
-    <div class="header_user">
+    <div class="header_user" onm>
      <span>Bienvenido </span> <span class="header_user-name"> {{user.name}}</span>
     </div>
     <button mat-raised-button color="accent" (click)="logout()">Log Out</button>
