--- a/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.scss
+++ b/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.scss
@@ -8,12 +8,12 @@
 box-shadow: 3px 10px 31px 21px rgba(0,0,0,0.19);
 &-title {
   padding-top: 20px;
+  padding-left: 20px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   >h3 {
-
     font-weight: 700;
   }
 }
@@ -23,8 +23,6 @@ box-shadow: 3px 10px 31px 21px rgba(0,0,0,0.19);
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 50px;
   }
 }
 }
