feat(new-client): acept PR. Modify back client model. Creating post client service (not finish)

--- a/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
+++ b/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
@@ -4,13 +4,14 @@
   </div>
   <div class="new-client-form">
     <form class="new-client-form__container">
-
-        <app-dynamic-form
-          (formData)="saveClient($event)"
-          [submit]="true"
-          [formFields]=" registerInputs"
-        ></app-dynamic-form>
-   
+      <app-dynamic-form
+        [formLayout]="'3'"
+        [inputLayout]="'3:1'"
+        (formData)="saveClient($event)"
+        (formData)="saveClient($event)"
+        [submit]="true"
+        [formFields]="registerInputs"
+      ></app-dynamic-form>
     </form>
   </div>
 </div>
