--- a/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.html
+++ b/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.html
@@ -1,4 +1,4 @@
-<section [formGroup]="form" ngClass="{{classInput}}">
+<section [formGroup]="form" >
 
 <mat-error  *ngIf="handleValidator() && showErrors" >
  <div *ngFor="let err of arrayErrors">
