--- a/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.scss
+++ b/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.scss
@@ -4,13 +4,6 @@
   font-family: var(--font-family);
 }
 
-.input1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.input1 {
-  display: flex;
-  width: 33%;
-  justify-content: center;
+mat-form-field {
+  min-width: 20vw;
 }
