--- a/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form.component.html
+++ b/front/src/app/shared/modules/components/components/dynamic-form/dynamic-form.component.html
@@ -1,12 +1,18 @@
-<form ngClass="{{formLayout}}" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <section  *ngFor="let field of formFields" class="form-row">
-    <app-dynamic-form-input
-    [classInput]="inputLayout"
-      [field]="field"
-      [form]="form"
-    ></app-dynamic-form-input>
-  </section>
-  <section [style.margin-top]="btnMargin">
-    <button *ngIf="this.submit" type="submit" mat-flat-button color="primary">{{ btnLabel }}</button>
-  </section>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <mat-grid-list cols="{{ formLayout }}" rowHeight="{{ inputLayout }}">
+    <mat-grid-tile *ngFor="let field of formFields">
+      <app-dynamic-form-input [field]="field" [form]="form"></app-dynamic-form-input>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <div class="button_group">
+
+    <button *ngIf="this.submit" type="submit" mat-flat-button color="primary" class="button_layout">
+      {{ btnLabel }}
+    </button>
+
+    <button *ngIf="this.submit" mat-stroked-button color="warn" (click)="onCancel()" class="button_layout">
+      {{ btnLabel2 }}
+    </button>
+
+  </div>
 </form>
