--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.button_group {
+  width: 100% !important;
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: flex-end !important;
+
+}
+.button_layout {
+margin:10px !important;
+}
