feat(new-client):working in new client.Not finished

--- a/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
+++ b/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
@@ -8,7 +8,7 @@
         [formLayout]="'3'"
         [inputLayout]="'3:1'"
         (formData)="saveClient($event)"
-        (formData)="saveClient($event)"
+        (cancelForm)="cancelForm($event)"
         [submit]="true"
         [formFields]="registerInputs"
       ></app-dynamic-form>
