feat(new-client):not work post

--- a/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
+++ b/front/src/app/modules/main/pages/clients/features/new-client/new-client.component.html
@@ -11,6 +11,7 @@
         (cancelForm)="cancelForm($event)"
         [submit]="true"
         [formFields]="registerInputs"
+        [messageToast1]="message"
       ></app-dynamic-form>
     </form>
   </div>
