--- a/front/src/app/modules/main/pages/clients/features/clients/clients.component.html
+++ b/front/src/app/modules/main/pages/clients/features/clients/clients.component.html
@@ -1,2 +1,36 @@
-<p>{{ testData || "Welcome to client" }}</p>
-<button (click)="testReq()" mat-button>text</button>
+<div class="clients">
+  <div class="new-client-title">
+    <h2>Listado clientes</h2>
+  </div>
+  <div *ngIf="!clients.length; else clientsTable">
+    <p>No se encuentran clientes en la BBDD</p>
+  </div>
+  <ng-template #clientsTable>
+    <table mat-table [dataSource]="clients" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="person_name">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.person_name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="phone_number">
+        <th mat-header-cell *matHeaderCellDef> Telefono </th>
+        <td mat-cell *matCellDef="let element"> {{element.phone_number}} </td>
+      </ng-container>
+
+
+  
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      </table>
+  </ng-template>
+
+
+
+</div>
