--- a/front/src/app/shared/modules/components/modal/modal.component.scss
+++ b/front/src/app/shared/modules/components/modal/modal.component.scss
@@ -4,13 +4,13 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 40vw;
+    min-height: 20vh;
     background: white;
     padding: 64px 0 ;
     border-radius: 8px;
     box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+    z-index: 9999;
   }
   .title{
     position: absolute;
@@ -59,8 +59,7 @@ section {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.4);
-  transition: opacity 250ms ease-in;
-  z-index: 99;
+  z-index: 999;
   opacity: 1;
   display: flex;
   justify-content: center;
