feature(edit): changes, fix and edit components

--- a/front/src/app/modules/main/pages/clients/features/clients/clients.component.html
+++ b/front/src/app/modules/main/pages/clients/features/clients/clients.component.html
@@ -43,6 +43,11 @@
     </table>
   </ng-template>
 </div>
-<app-modal [titleModal]="titleModal" [btn1Visible]="true" [btnLabel]="'Eliminar'" (modalAction)="deleteClient($event)">
-  <p>¿Desea eliminar el cliente {{clientUses?.person_name}}?</p>
+<app-modal
+  [titleModal]="titleModal"
+  [btn1Visible]="true"
+  [btnLabel]="'Eliminar'"
+  (modalAction)="deleteClient($event)"
+>
+  <p>¿Desea eliminar el cliente {{ clientUses.person_name }}?</p>
 </app-modal>
