feat(update): css, layout, inputs update. Merge Conflicts. Initial route link color. GetById functions in resolve

--- a/front/src/app/shared/modules/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.html
+++ b/front/src/app/shared/modules/components/dynamic-form/dynamic-form-input/dynamic-form-input.component.html
@@ -21,6 +21,7 @@
         [type]="field.type"
         [readonly]="field.readonly"
         placeholder="{{ field.placeholder }}"
+        [disabled]="field.disabled"
       />
     </mat-form-field>
     <!-- MAT INPUT END -->
