--- a/front/src/app/modules/main/pages/clients/features/update/update.component.html
+++ b/front/src/app/modules/main/pages/clients/features/update/update.component.html
@@ -1,10 +1,28 @@
-<div class="new-client">
-  <div class="new-client-title">
-    <h2>Editar Cliente</h2>
+<div class="update-client">
+  <div class="update-client-header">
+    <div class="update-client-title">
+      <h2>Editar Cliente </h2>
+      <h4 class="update-client-subtitle">{{client.person_name}}</h4>
+    </div>
+    <mat-form-field
+        class="form-field"
+        appearance="fill"
+      >
+        <mat-label > Código </mat-label>
+        <input
+          matInput
+         [value]="client.client_code"
+          [readonly]="true"
+          placeholder="'Código Cliente'"
+          [disabled]="true"
+        />
+      </mat-form-field>
   </div>
-  <div class="new-client-form">
-    <form class="new-client-form__container">
+
+  <div class="update-client-form">
+    <form class="update-client-form__container">
       <app-dynamic-form
+      [btnLabel]="'Guardar'"
         [formLayout]="'3'"
         [inputLayout]="'3:1'"
         (formData)="updateClient($event)"
