feature(client-trash): title

--- a/front/src/app/modules/main/pages/clients/features/trash-bin/trash-bin.component.html
+++ b/front/src/app/modules/main/pages/clients/features/trash-bin/trash-bin.component.html
@@ -1,6 +1,6 @@
 <div class="clients">
   <div class="clients-title">
-    <h2>Listado clientes</h2>
+    <h2>Clientes desactivados</h2>
   </div>
   <div *ngIf="!clients!.length; else clientsTable">
     <p>No se encuentran clientes en la BBDD</p>
