feat(input-file): component and logic. Update component recived data. Modify api for save docs and getClients filter fields

--- a/front/src/app/modules/main/pages/clients/features/update/update.component.html
+++ b/front/src/app/modules/main/pages/clients/features/update/update.component.html
@@ -35,5 +35,5 @@
       ></app-dynamic-form>
     </form>
   </div>
-  <app-input-file></app-input-file>
+  <app-input-file (emitDocs)="recivedDocs($event)" [docs]="client.docs"></app-input-file>
 </div>
